<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_200"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nombreTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/emailTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nombre" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailTextField"
        android:layout_width="400dp"
        android:layout_height="38dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreTextField"
        tools:text="Email" />

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/delete"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUpdate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <ImageButton
        android:id="@+id/buttonUpdate"
        android:layout_width="86dp"
        android:layout_height="50dp"
        android:layout_marginEnd="72dp"
        android:background="@color/white"
        android:contentDescription="@string/update"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/buttonAdd"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:background="@color/white"
        android:contentDescription="@string/add"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_add_box_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombreTextField"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />
</androidx.constraintlayout.widget.ConstraintLayout>